[package]
name = "quasi"
version = "0.10.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[features]
with-syntex = ["syntex_syntax"]

[dependencies]
syntex_syntax = { version = "^0.32.0", optional = true }
