[package]
name = "quasi"
version = "0.12.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
with-syntex = ["syntex_syntax"]

[dependencies]
syntex_syntax = { version = "^0.35.0", optional = true }
