[package]
name = "quasi"
version = "0.13.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
with-syntex = ["syntex_syntax"]
unstable-testing = ["clippy"]

[dependencies]
syntex_syntax = { version = "^0.36.0", optional = true }
clippy = { version = "^0.*", optional = true }
