[package]
name = "quasi_codegen"
version = "0.12.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
default = ["with-syntex"]
with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]

[dependencies]
aster = { version = "^0.18.0", default-features = false }
syntex = { version = "^0.35.0", optional = true }
syntex_syntax = { version = "^0.35.0", optional = true }
