[package]
name = "quasi_macros"
version = "0.3.4"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[lib]
name = "quasi_macros"
plugin = true

[dependencies]
quasi_codegen = { version = "*", path = "../quasi_codegen", default-features = false }

[dev-dependencies]
aster = ">= 0.4.10"
quasi = { version = "*", path = "../quasi" }
