[package]
name = "quasi_macros"
version = "0.30.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/serde-rs/quasi"
include = ["Cargo.toml", "src/**/*.rs"]

[lib]
name = "quasi_macros"
plugin = true

[features]
unstable-testing = ["clippy", "quasi/unstable-testing", "quasi_codegen/unstable-testing"]

[dependencies]
clippy = { version = "^0.*", optional = true }
quasi_codegen = { version = "^0.30.0", path = "../quasi_codegen", default-features = false }

[dev-dependencies]
aster = "^0.39.0"
quasi = { version = "^0.30.0", path = "../quasi" }
