[package]
name = "quasi_tests"
version = "0.13.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
build = "build.rs"

[features]
unstable-testing = ["clippy", "quasi/unstable-testing", "quasi_codegen/unstable-testing"]

[build-dependencies]
quasi_codegen = { path = "../quasi_codegen" }
syntex = { version = "^0.36.0" }

[dependencies]
clippy = { version = "^0.*", optional = true }

[dev-dependencies]
aster = { version = "^0.19.0", features = ["with-syntex"] }
quasi = { path = "../quasi", features = ["with-syntex"] }
syntex = { version = "^0.36.0" }
syntex_syntax = { version = "^0.36.0" }
